--- a/application/homeapi/view/public/footer.html
+++ b/application/homeapi/view/public/footer.html
@@ -55,5 +55,5 @@
   <div class="copyright text-center">Copyright &copy; 2018 www.zhongtia.com All Rights Reserved</div>
 </footer>
 <script src="https://cdn.bootcss.com/babel-polyfill/7.2.5/polyfill.min.js"></script>
-<script src="__STATIC__/scripts/common.bundle.js?v=201901181134"></script>
-<script src="__STATIC__/utils/tools.js"></script>
+<script src="__STATIC__/scripts/common.bundle.js?v=20190123"></script>
+<script src="__STATIC__/utils/tools.js?v=20190123"></script>
