修改时间戳

--- a/application/homeapi/view/usercenter/user_left.html
+++ b/application/homeapi/view/usercenter/user_left.html
@@ -1,3 +1,8 @@
+{php} 
+  $year = substr($user['birthday'], 0, 4);
+  $month = substr($user['birthday'], 4, 2);
+  $day = substr($user['birthday'], -1, 2);
+{/php}
 <div class="user-info">
   <div class="user-info__header">
     <div class="avatar">
